smoke collision fails #43674

Closed
opened 2015-02-15 19:09:17 +01:00 by Ronny G · 15 comments

System Information
ubuntu 14.04, 630gt

Blender Version
Broken: 2.73

Short description of error

see the image

Screenshot_from_2015-02-15_19:01:34.png

Exact steps for others to reproduce the error

load the blend file and hit alt+a

smokecollisionfail.blend

**System Information** ubuntu 14.04, 630gt **Blender Version** Broken: 2.73 **Short description of error** see the image ![Screenshot_from_2015-02-15_19:01:34.png](https://archive.blender.org/developer/F143545/Screenshot_from_2015-02-15_19_01_34.png) **Exact steps for others to reproduce the error** load the blend file and hit alt+a [smokecollisionfail.blend](https://archive.blender.org/developer/F143547/smokecollisionfail.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm the problem.
It disappears if domain resolution is increased to 33 divisions.

I confirm the problem. It disappears if domain resolution is increased to 33 divisions.
Author

it works here with res 29 and 31 zeauro

but if you move the collision object down it fails again (also with res 35 etc - seems to be random)

it works here with res 29 and 31 zeauro but if you move the collision object down it fails again (also with res 35 etc - seems to be random)
Member

Added subscribers: @LukasTonne, @JulianEisel

Added subscribers: @LukasTonne, @JulianEisel
Member

Seems like it kindof reacts to the collision surface, but only halfway :/ @LukasTonne?

Seems like it kindof reacts to the collision surface, but only halfway :/ @LukasTonne?
Member

@LukasTonne, it looks like this has never worked and may be due to our poor particle system, so let's move this to the Todo?

@LukasTonne, it looks like this has never worked and may be due to our poor particle system, so let's move this to the Todo?

Added subscriber: @Sergey

Added subscriber: @Sergey

@JulianEisel, i don't see any relation with particles here, Please be more accurate with investigating the issues and giving clues.

@JulianEisel, i don't see any relation with particles here, Please be more accurate with investigating the issues and giving clues.
Member

I think this is related to the adaptive domain feature: when i disable this, resize the domain box to include the emitter, and increase the division for roughly equal cell size, the problem disappears and collision keeps the interior free.

smokecollisionfail1.png

I think this is related to the adaptive domain feature: when i disable this, resize the domain box to include the emitter, and increase the division for roughly equal cell size, the problem disappears and collision keeps the interior free. ![smokecollisionfail1.png](https://archive.blender.org/developer/F149367/smokecollisionfail1.png)
Member

More testing: Moving the obstacle object away from the center axis also seems to "solve" the issue:
smokecollisionfail2.png smokecollisionfail3.png

This could indicate an alignment issue: notice how the first case still shows the problem on one side, where the offset is less than one cell.

More testing: Moving the obstacle object away from the center axis also seems to "solve" the issue: ![smokecollisionfail2.png](https://archive.blender.org/developer/F149370/smokecollisionfail2.png) ![smokecollisionfail3.png](https://archive.blender.org/developer/F149372/smokecollisionfail3.png) This could indicate an alignment issue: notice how the first case still shows the problem on one side, where the offset is less than one cell.

This issue was referenced by 219937fc5d

This issue was referenced by 219937fc5dbde485bdd50feaccf496e26c63df40
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 219937fc5d.

Closed by commit 219937fc5d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43674
No description provided.